--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!\n My name is Yiming Li.\n My name is Ping Lin.\n My name is Stephen O'Brien."
+        android:text="Hello World!\n My name is Yiming Li.\n My name is Ping Lin.\n My name is Stephen O'Brien.\n My name is Yuexi Chen."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
