Song & Songlist feature on process

--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -17,9 +17,9 @@
             android:id="@+id/artist_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:contentDescription="@string/artist_image"
             android:scaleType="centerCrop"
-            android:src="@drawable/default_artist"
-            android:contentDescription="@string/artist_image" />
+            android:src="@drawable/default_artist" />
 
         <LinearLayout
             android:layout_width="0dp"
