--- a/app/src/main/res/layout/activity_song_play.xml
+++ b/app/src/main/res/layout/activity_song_play.xml
@@ -45,12 +45,12 @@
         android:gravity="center"
         android:layout_marginTop="20dp">
 
-        <ImageButton
-            android:id="@+id/btn_prev"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@android:drawable/ic_media_previous"
-            android:background="?attr/selectableItemBackground"/>
+<!--        <ImageButton-->
+<!--            android:id="@+id/btn_prev"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@android:drawable/ic_media_previous"-->
+<!--            android:background="?attr/selectableItemBackground"/>-->
 
         <ImageButton
             android:id="@+id/btn_play_pause"
@@ -61,12 +61,12 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"/>
 
-        <ImageButton
-            android:id="@+id/btn_next"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@android:drawable/ic_media_next"
-            android:background="?attr/selectableItemBackground"/>
+<!--        <ImageButton-->
+<!--            android:id="@+id/btn_next"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@android:drawable/ic_media_next"-->
+<!--            android:background="?attr/selectableItemBackground"/>-->
 
     </LinearLayout>
 
