--- a/app/src/main/res/layout/activity_song_play.xml
+++ b/app/src/main/res/layout/activity_song_play.xml
@@ -39,7 +39,7 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/album_cover"
+                android:id="@+id/song_cover"
                 android:layout_width="match_parent"
                 android:layout_height="280dp"
                 android:scaleType="centerCrop"
