--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -15,7 +15,7 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/song_image"
+            android:id="@+id/song_cover"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="centerCrop"
